# strata-bridge

./: .codespellrc  .gitignore  .justfile  CONTRIBUTING.md  Cargo.toml  README.md  compose.yml  rust-toolchain.toml  strata-bridge.sp1vk
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  cron-nightly-rust.yml  docker.yml  docs.yml  lint-actions.yml  lint.yml  security.yml  unit.yml  zizmor.yml
bridge-guest-builder/: Cargo.toml  build.rs
bridge-guest-builder/src/: lib.rs
crates/algebra/src/: lib.rs
crates/bridge-proof/primitives/: Cargo.toml
crates/bridge-proof/primitives/src/: tx_inclusion_proof.rs
crates/bridge-proof/protocol/: Cargo.toml
crates/bridge-proof/protocol/src/: error.rs  lib.rs  program.rs  statement.rs  tx_info.rs
crates/bridge-proof/snark/: Cargo.toml
crates/bridge-proof/snark/src/: prover.rs
crates/bridge-proof/test-utils/: Cargo.toml
crates/bridge-proof/test-utils/src/: lib.rs
crates/btc-notify/: Cargo.toml
crates/btc-notify/src/: client.rs  config.rs  event.rs  lib.rs  state_machine.rs  subscription.rs
crates/common/src/: logging.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: connector_a3.rs  connector_c0.rs  connector_c1.rs  connector_cpfp.rs  connector_k.rs  connector_n_of_n.rs  connector_p.rs  connector_s.rs  connectors_a.rs  partial_verification_scripts.rs  stake_path.rs
crates/db/: Cargo.toml
crates/db/src/: errors.rs  lib.rs  operator.rs  public.rs
crates/db/src/inmemory/: mod.rs  operator.rs  prelude.rs  public.rs
crates/db/src/persistent/: config.rs  errors.rs  mod.rs  models.rs  prelude.rs  sqlite.rs  types.rs
crates/duty-tracker/: Cargo.toml
crates/duty-tracker/src/: contract_actor.rs  contract_manager.rs  contract_persister.rs  contract_state_machine.rs  errors.rs  lib.rs  predicates.rs  shutdown.rs  stake_chain_persister.rs  stake_chain_state_machine.rs  tx_driver.rs
crates/duty-tracker/src/executors/: config.rs  constants.rs  contested_withdrawal.rs  deposit.rs  mod.rs  optimistic_withdrawal.rs  prelude.rs  proof_handler.rs  wots_handler.rs
crates/operator-wallet/src/: lib.rs
crates/p2p-service/: Cargo.toml
crates/p2p-service/src/: bootstrap.rs  config.rs  lib.rs  message_handler.rs
crates/p2p-service/src/tests/: common.rs  gossipsub.rs  request.rs
crates/params/: Cargo.toml
crates/params/src/: default.rs  errors.rs  lib.rs  tx_graph.rs  types.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bitcoin.rs  build_context.rs  constants.rs  errors.rs  key_agg.rs  lib.rs  operator_table.rs  types.rs  wots.rs
crates/primitives/src/scripts/: commitments.rs  general.rs  metadata.rs  mod.rs  parse_witness.rs  prelude.rs  taproot.rs  transform.rs
crates/rpc/src/: traits.rs  types.rs
crates/secret-service-client/: Cargo.toml
crates/secret-service-client/src/: lib.rs  p2p.rs  wots.rs
crates/secret-service-proto/: Cargo.toml
crates/secret-service-proto/src/: lib.rs
crates/secret-service-proto/src/v2/: rkyv_wrappers.rs  traits.rs  wire.rs
crates/secret-service-server/src/: lib.rs
crates/stake-chain/: Cargo.toml
crates/stake-chain/src/: errors.rs  stake_chain.rs
crates/stake-chain/src/transactions/: constants.rs  stake.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: arbitrary_generator.rs  bitcoin.rs  bitcoin_rpc.rs  deposit.rs  lib.rs  prelude.rs  tx.rs  wots.rs
crates/tx-graph/: Cargo.toml
crates/tx-graph/src/: errors.rs  lib.rs  peg_out_graph.rs  pog_musig_functor.rs
crates/tx-graph/src/transactions/: assert_chain.rs  assert_data.rs  burn_payouts.rs  challenge.rs  claim.rs  covenant_tx.rs  cpfp.rs  deposit.rs  disprove.rs  errors.rs  mod.rs  payout.rs  payout_optimistic.rs  post_assert.rs  pre_assert.rs  prelude.rs  slash_stake.rs  withdrawal_fulfillment.rs
crates/wots/: Cargo.toml
crates/wots/src/: lib.rs
docker/: README.md  gen_s2_tls.sh
docker/alpen-bridge/: Dockerfile
docker/bitcoin/: entrypoint.sh
docker/vol/alpen-bridge-1/: config.toml
docker/vol/alpen-bridge-2/: config.toml  params.toml
docker/vol/alpen-bridge-3/: config.toml
migrations/: 20241113060253_init_schema.sql
test-data/: chainstate.borsh  rollup_params.json
