[package]
name = "btc-notify"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
bitcoincore-zmq = { version = "1.5.2", features = ["async"] }
futures.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "test-util"] }
tracing.workspace = true

[dev-dependencies]
strata-bridge-common.workspace = true
strata-bridge-test-utils.workspace = true

corepc-node.workspace = true
proptest.workspace = true
serial_test.workspace = true
