[package]
name = "strata-bridge-connectors"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true
strata-bridge-proof-snark.workspace = true

ark-serialize.workspace = true
bincode.workspace = true
bitcoin.workspace = true
bitcoin-script.workspace = true
bitvm.workspace = true
secp256k1.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true
strata-bridge-proof-protocol.workspace = true
strata-bridge-common.workspace = true

bitcoind-async-client.workspace = true
borsh.workspace = true
corepc-node.workspace = true
sp1-verifier.workspace = true
