[package]
edition = "2021"
name = "strata-bridge-db"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true
strata-bridge-stake-chain.workspace = true

arbitrary.workspace = true
async-trait.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
musig2 = { workspace = true, features = ["serde"] }
rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true
