[package]
name = "duty-tracker"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
algebra.workspace = true
alpen-bridge-params.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-db.workspace = true
strata-bridge-p2p-service.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof-primitives.workspace = true
strata-bridge-proof-protocol.workspace = true
strata-bridge-proof-snark.workspace = true
strata-bridge-stake-chain.workspace = true
strata-bridge-tx-graph.workspace = true

strata-l1tx.workspace = true
strata-p2p.workspace = true
strata-p2p-types = { workspace = true, features = ["proptest"] }
strata-p2p-wire.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-tasks.workspace = true

ark-bn254.workspace = true
ark-groth16.workspace = true
bdk_wallet.workspace = true
bincode.workspace = true
bitcoin.workspace = true
bitcoin-bosd.workspace = true
bitcoind-async-client.workspace = true
bitvm.workspace = true
borsh.workspace = true
btc-notify.workspace = true
futures.workspace = true
musig2.workspace = true
operator-wallet.workspace = true
secp256k1.workspace = true
secret-service-client.workspace = true
secret-service-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tracing.workspace = true

[dev-dependencies]
strata-bridge-common.workspace = true
strata-bridge-test-utils.workspace = true

corepc-node.workspace = true
hex.workspace = true
proptest.workspace = true
serial_test.workspace = true
