[package]
edition = "2021"
name = "strata-bridge-p2p-service"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-p2p.workspace = true
strata-p2p-types.workspace = true
strata-p2p-wire.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
libp2p.workspace = true
musig2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true
strata-bridge-common.workspace = true

futures.workspace = true
tokio.workspace = true
