[package]
edition = "2021"
name = "strata-bridge-primitives"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
alpen-bridge-params.workspace = true
strata-primitives.workspace = true

algebra.workspace = true
anyhow.workspace = true
arbitrary.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-script.workspace = true
bitvm.workspace = true
miniscript.workspace = true
musig2 = { workspace = true, features = ["serde"] }
proptest.workspace = true
proptest-derive.workspace = true
rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
sha2.workspace = true
strata-p2p-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
