[package]
name = "secret-service-proto"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
bitvm.workspace = true
musig2.workspace = true
quinn.workspace = true
rkyv.workspace = true
strata-bridge-primitives.workspace = true
terrors.workspace = true
