[package]
edition = "2021"
name = "strata-bridge-stake-chain"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
alpen-bridge-params.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-primitives.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-bridge-common.workspace = true

corepc-node.workspace = true
secp256k1.workspace = true
tracing.workspace = true
