[package]
edition = "2021"
name = "strata-bridge-tx-graph"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
alpen-bridge-params.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-primitives.workspace = true

strata-primitives.workspace = true

algebra.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-bosd.workspace = true
bitcoin-script = { workspace = true }
bitvm = { workspace = true }
futures = { workspace = true }
proptest.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-bridge-common.workspace = true
strata-bridge-db.workspace = true
strata-bridge-stake-chain.workspace = true
strata-bridge-test-utils.workspace = true

bitcoind-async-client.workspace = true
corepc-node.workspace = true
rkyv.workspace = true
serde_json.workspace = true
tokio.workspace = true
