[package]
name = "strata-bridge-proof-primitives"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
strata-primitives.workspace = true
strata-proofimpl-btc-blockspace.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true

[dev-dependencies]
bincode.workspace = true
strata-bridge-test-utils.workspace = true
