[package]
name = "strata-bridge-proof-protocol"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alpen-bridge-params.workspace = true
strata-bridge-proof-primitives.workspace = true

strata-crypto.workspace = true
strata-l1tx.workspace = true
strata-primitives.workspace = true
strata-proofimpl-btc-blockspace.workspace = true
strata-state.workspace = true

zkaleido.workspace = true
zkaleido-native-adapter.workspace = true

bitcoin.workspace = true
borsh.workspace = true
thiserror.workspace = true

[dev-dependencies]
strata-bridge-common.workspace = true
tracing.workspace = true
prover-test-utils.workspace = true
